# skills

./: CLAUDE.md  README.md  pyproject.toml
dev/: code-review.md  commit.md  ola-keka.md  ola-mundo.md
gui_skill/: cli.py  hook.py
produtos/: prd.md
